# Cognitio

./: .gitignore  CMakeLists.txt  Makefile  cognitio  cognitio.out  cognosco  compile_commands.json  core.cpp  mkdocs.yml  source.cpp
cognitio/: cognitio.hpp
cognitio_files/: Makefile  cognosco_headers.hpp
cognitio_files/neural_network/: .activation_functions.cpp.swp  .calculation.hpp.swp  .neural_network.cpp.swp  .neural_network.hpp.swp  activation_functions.cpp  activation_functions.hpp  calculation.cpp  calculation.hpp  neural_network.cpp  neural_network.hpp  neural_network_headers.hpp
cognosco_files/: Makefile  cognosco.cpp  cognosco.h  cognosco.hpp  cognosco_core.cpp  cognosco_core.h  softmax.cpp  softmax.hpp
cognosco_files/genetic/: genetic.hpp
cognosco_files/genetic_algorithm/: Makefile  genetic.cpp  genetic.h  genetic_core.cpp  genetic_core.h
cognosco_files/matrix/: Makefile  matrix.cpp  matrix.hpp  matrix_arithmetic_ops.hpp  matrix_header.hpp  matrix_ops.hpp  matrix_relational_ops.hpp
cognosco_files/neural_network/: neural.cpp  neural.h  neuron.cpp  neuron.hpp
cognosco_files/strings/: string.cpp  string.hpp
docs/: Deep_Learning.aux  Deep_Learning.tex  Deep_Learning.toc  backprop.tex  index.md  intro.tex
docs/api/: index.md
docs/source/: conf.py
docs/tutorial/: index.md
examples/: CMakeLists.txt
examples/mnist/: main.cpp
resources/luxfiles/: names.lux
source/: main.cpp
src/: Makefile  cognitio.cpp  cognitio.hpp  cognosco_headers.hpp  logger.cpp  logger.hpp
src/genetic/: genetic.hpp  genetic_headers.hpp
tf/: test.py
(+8 files in other folders)
